<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HiraKata</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_practice_page">PracticePage</string>
    <string name="title_activity_test_page">TestPage</string>
    <string name="description">ImageButton</string>
    <string name="bt_name_hira">Hiragana</string>
    <string name="bt_name_kata">Katakana</string>
    <string name="bt_name_all">All</string>
    <string name="lv_name_largeText">TestText</string>
    <string name="title_activity_first_page">FirstPage</string>
    <string name="hello_world">Hello world!</string>
    <string name="bt_practice">Practice in Order</string>
    <string name="practice_random">Practice in random Order</string>
    <string name="bt_test">Make a Test</string>
    <string name="bt_table">Show Kana Table</string>
    <string name="cb_sorted">Show in order</string>
    <string name="cb_random">Show random</string>
    <string name="cb_test_all">Test all</string>
    <string name="cb_test_red">Test only red</string>
    <string name="next_toast">No next character</string>
    <string name="prev_toast">No previous character!</string>
    <string name="rb_order">Show in order</string>
    <string name="rb_rand">Show random</string>
    <string name="rb_all">Test all</string>
    <string name="rb_red">Test only red</string>
    <string name="kana_1">Hiragana:\n A</string>
    <string name="kana_2">Hiragana:\n I</string>
    <string name="kana_3">Hiragana:\n U</string>
    <string name="kana_4">Hiragana:\n E</string>
    <string name="kana_5">Hiragana:\n O</string>
    <string name="kana_6">Hiragana:\n KA</string>
    <string name="kana_7">Hiragana:\n KI</string>
    <string name="kana_8">Hiragana:\n KU</string>
    <string name="kana_9">Hiragana:\n KE</string>
    <string name="kana_10">Hiragana:\n KO</string>
    <string name="kana_11">Hiragana:\n SA</string>
    <string name="kana_12">Hiragana:\n SHI</string>
    <string name="kana_13">Hiragana:\n SU</string>
    <string name="kana_14">Hiragana:\n SE</string>
    <string name="kana_15">Hiragana:\n SO</string>
    <string name="kana_16">Hiragana:\n TA</string>
    <string name="kana_17">Hiragana:\n CHI</string>
    <string name="kana_18">Hiragana:\n TSU</string>
    <string name="kana_19">Hiragana:\n TE</string>
    <string name="kana_20">Hiragana:\n TO</string>
    <string name="kana_21">Hiragana:\n NA</string>
    <string name="kana_22">Hiragana:\n NI</string>
    <string name="kana_23">Hiragana:\n NU</string>
    <string name="kana_24">Hiragana:\n NE</string>
    <string name="kana_25">Hiragana:\n NO</string>
    <string name="kana_26">Hiragana:\n HA</string>
    <string name="kana_27">Hiragana:\n HI</string>
    <string name="kana_28">Hiragana:\n FU</string>
    <string name="kana_29">Hiragana:\n HE</string>
    <string name="kana_30">Hiragana:\n HO</string>
    <string name="kana_31">Hiragana:\n MA</string>
    <string name="kana_32">Hiragana:\n MI</string>
    <string name="kana_33">Hiragana:\n ME</string>
    <string name="kana_34">Hiragana:\n ME</string>
    <string name="kana_35">Hiragana:\n MO</string>
    <string name="kana_36">Hiragana:\n YA</string>
    <string name="kana_38">Hiragana:\n YU</string>
    <string name="kana_40">Hiragana:\n YO</string>
    <string name="kana_41">Hiragana:\n RA</string>
    <string name="kana_42">Hiragana:\n RI</string>
    <string name="kana_43">Hiragana:\n RU</string>
    <string name="kana_44">Hiragana:\n RE</string>
    <string name="kana_45">Hiragana:\n RO</string>
    <string name="kana_46">Hiragana:\n WA</string>
    <string name="kana_50">Hiragana:\n WO</string>
    <string name="kana_51">Hiragana:\n N</string>
    <string name="kana_56">Katakana:\n A</string>
    <string name="kana_57">Katakana:\n I</string>
    <string name="kana_58">Katakana:\n U</string>
    <string name="kana_59">Katakana:\n E</string>
    <string name="kana_60">Katakana:\n O</string>
    <string name="kana_61">Katakana:\n KA</string>
    <string name="kana_62">Katakana:\n KI</string>
    <string name="kana_63">Katakana:\n KU</string>
    <string name="kana_64">Katakana:\n KE</string>
    <string name="kana_65">Katakana:\n KO</string>
    <string name="kana_66">Katakana:\n SA</string>
    <string name="kana_67">Katakana:\n SHI</string>
    <string name="kana_68">Katakana:\n SU</string>
    <string name="kana_69">Katakana:\n SE</string>
    <string name="kana_70">Katakana:\n SO</string>
    <string name="kana_71">Katakana:\n TA</string>
    <string name="kana_72">Katakana:\n CHI</string>
    <string name="kana_73">Katakana:\n TSU</string>
    <string name="kana_74">Katakana:\n TE</string>
    <string name="kana_75">Katakana:\n TO</string>
    <string name="kana_76">Katakana:\n NA</string>
    <string name="kana_77">Katakana:\n NI</string>
    <string name="kana_78">Katakana:\n NU</string>
    <string name="kana_79">Katakana:\n NE</string>
    <string name="kana_80">Katakana:\n NO</string>
    <string name="kana_81">Katakana:\n HA</string>
    <string name="kana_82">Katakana:\n HI</string>
    <string name="kana_83">Katakana:\n FU</string>
    <string name="kana_84">Katakana:\n HE</string>
    <string name="kana_85">Katakana:\n HO</string>
    <string name="kana_86">Katakana:\n MA</string>
    <string name="kana_87">Katakana:\n MI</string>
    <string name="kana_88">Katakana:\n MU</string>
    <string name="kana_89">Katakana:\n ME</string>
    <string name="kana_90">Katakana:\n MO</string>
    <string name="kana_91">Katakana:\n YA</string>
    <string name="kana_93">Katakana:\n YU</string>
    <string name="kana_95">Katakana:\n YO</string>
    <string name="kana_96">Katakana:\n RA</string>
    <string name="kana_97">Katakana:\n RI</string>
    <string name="kana_98">Katakana:\n RU</string>
    <string name="kana_99">Katakana:\n RE</string>
    <string name="kana_100">Katakana:\n RO</string>
    <string name="kana_101">Katakana:\n WA</string>
    <string name="kana_105">Katakana:\n WO</string>
    <string name="kana_106">Katakana:\n N</string>
    <string name="title_activity_table_page">TablePage</string>
    <color name="color">#284610</color>
	<color name="red">#FF4444</color>
	<color name="orange">#FFFF44 </color>
	<color name="green">#44FF44</color>
	
</resources>