<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FirstPage" >

    <Button
        android:id="@+id/practice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_practice" />

    <RadioGroup
        android:id="@+id/radioPractice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rb_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_order" />

        <RadioButton
            android:id="@+id/rb_rand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_rand" />
    </RadioGroup>

    <Button
        android:id="@+id/test"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_test" />

    <RadioGroup
        android:id="@+id/radioTest"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rb_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_all" />

        <RadioButton
            android:id="@+id/rb_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_red" />
    </RadioGroup>

    <Button
        android:id="@+id/table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_table" />

</LinearLayout>