<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".StartPage" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/Hiragana"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bt_name_hira" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/Katakana"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bt_name_kata" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/All"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bt_name_all" />
    </TableRow>

</TableLayout>